# django-for-runners_ynh

./: .editorconfig  .flake8  .gitignore  .safety-policy.yml  Makefile  README.md  README_es.md  README_eu.md  README_fr.md  README_gl.md  README_id.md  README_it.md  README_nl.md  README_pl.md  README_ru.md  README_zh_Hans.md  dev-cli.py  local_test.py  manifest.json  manifest.toml  pyproject.toml  requirements.dev.txt  test_requirements.sh
.github/workflows/: package_linter.yml  pytest.yml  tests.yml
conf/: create_superuser.py  django-for-runners.service  for_runners.service  manage.py  nginx.conf  requirements.txt  settings.py  urls.py  wsgi.py  ynh_for_runners_settings.py  ynh_sso_ldap_backend.py  ynh_urls.py
doc/: ADMIN.md  DESCRIPTION.md  DISCLAIMER.md
for_runners_ynh/: __init__.py  constants.py
for_runners_ynh/cli/: dev.py
for_runners_ynh/cli_dev/: __init__.py  code_style.py  packaging.py  testing.py
for_runners_ynh/tests/: __init__.py  test_django_project.py  test_django_project_create_unknown_user_1.snapshot.html  test_doctests.py  test_project_setup.py  test_readme.py
scripts/: _common.sh  change_url  install  restore  setup-pyrun.py  upgrade
tests/: test_django_project.py  test_django_project_create_unknown_user_1.snapshot.html  test_manage_local_test.py  test_project_setup.py
